--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,18 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: darkslategrey;
+}
+
 h1 {
     color: red;
     text-align: center;
+    background-color: #222;
+    font-size: 2.5em;
+    padding: 1em;
+    border-top: solid 5px darkseagreen;
+    border-bottom: solid 5px darkseagreen;
 }
