--- a/assets/style.css
+++ b/assets/style.css
@@ -7,12 +7,32 @@ body {
     background-color: #f4f4f4;
 }
 
+.container {
+    margin: 0px 30px;
+}
+
 .hide {
     display: none;
 }
 
 .show {
     display: block;
+}
+
+.timerRow {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0px;
+}
+
+.welcomeRow {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.headerDiv {
+    margin: auto;
 }
 
 #welcomeHeader {
@@ -38,7 +58,40 @@ body {
     
 }
 
+.quizRow {
+    display: flex;
+    flex-direction: column;
+}
+
 button {
     font-size: 18px;
     padding: 3px;
+    margin: 5px;
+}
+
+@media (max-width: 1110px) {
+    #welcomeIntro {
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 890px) {
+    #welcomeIntro {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 540px) {
+    .container {
+        margin: 0px;
+    }
+
+    #welcomeHeader {
+        width: 540px;
+    }
+
+    #welcomeIntro {
+        font-size: 16px;
+    }
+
 }
