cleaned up some class names in HTML and replaced some with id's for more specificity; updated JS to match; placed rows around each stage of the quiz in my HTML and used flex columns to align content at each stage of quiz; styling for existing elements is almost finished

--- a/assets/style.css
+++ b/assets/style.css
@@ -19,13 +19,13 @@ body {
     display: block;
 }
 
-.timerRow {
+#timerRow {
     display: flex;
     justify-content: space-between;
     margin: 20px 0px;
 }
 
-.welcomeRow {
+#welcomeRow {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,19 +52,48 @@ body {
     margin: 20px 200px;
 }
 
-#start {
+#startButton {
     font-size: 30px;
-    padding: 5px;
+    padding: 10px;
     
 }
 
-.quizRow {
+#quizRow {
     display: flex;
     flex-direction: column;
 }
 
+#questions {
+    text-align: center;
+}
+
+#response{
+    text-align: center;
+    font-weight: bold;
+}
+
 button {
     font-size: 18px;
+    padding: 10px;
+    margin: 5px;
+    color: #f4f4f4;
+    background-color: purple;
+}
+
+#quizEndRow {
+    font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+input {
+    font-size: 25px;
+}
+
+#submitScore {
+    font-size: 25px;
     padding: 3px;
     margin: 5px;
 }
