--- a/assets/style.css
+++ b/assets/style.css
@@ -96,8 +96,8 @@ input {
 }
 
 #scoreRow {
-    display: flex;
-    align-content: center;
+    margin-top: 25px;
+    margin-left: 25px;
 }
 
 @media (max-width: 1110px) {
